# SignBridge

./: PLAN.md
WLASL/: pyproject.toml
WLASL/code/: TP.ipynb  clustering.ipynb  clustering_readme.md  concat.py  cross_attention.py  mouth_features.py  videos.ipynb  videos_readme.md
WLASL/code/I3D/: augment_offline.py  train_i3d.py
WLASL/code/I3D/preprocess/: nslt_valid.json  nslt_valid_aug.json
WLASL/code/TGCN/: tgcn_model.py
WLASL/start_kit/: add_hand_bbox_to_wlasl_json.py  corrupted.txt  glosses.py  glosses_valid.json  missing.txt  utils.py
