[project]
name = "wlasl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "albumentations>=2.0.8",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "mediapipe>=0.10.35",
    "numpy>=2.4.6",
    "opencv-python==4.10.0.84",
    "pandas>=3.0.3",
    "pillow>=10.0.0",
    "requests>=2.34.2",
    "scikit-learn>=1.0.0",
    "scipy>=1.17.1",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "yt-dlp>=2026.3.17",
]
